[package]
name = "node-fastcdc"
version = "2.0.0"
description = "NodeJS bindings for rust-fastcdc"
authors = ["Mikola Lysenko"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastcdc = "3.1.0"
neon = "1"
